--- a/DedicatedWorker/index.html
+++ b/DedicatedWorker/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1 id="h1">Web Workers basic example</h1>
+    <h1>Dedicated Worker basic example</h1>
 
     <div class="controls" tabindex="0">
 
@@ -27,7 +27,7 @@
                 <input type="text" id="number2" value="0">
             </div>
 
-            <button type="button" onclick="onSubmit()" class="buttonSubmit">SUBMIT</button>
+            <button type="button" onclick="onSubmit()">SUBMIT</button>
         </form>
 
         <p class="result">Result: 0</p>
